Correction grid-gap sur les galeries d'images

--- a/sass/__photographerPage.scss
+++ b/sass/__photographerPage.scss
@@ -101,6 +101,9 @@
 /*-------------------------------------------Gallery---------------------------------------------------*/
 
 .medias {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
     margin-top: 2.5rem;
     margin-bottom: 10rem;
     width: 100%;
@@ -152,9 +155,8 @@
 
 @media screen and (min-width: 768px) {
     .medias {
-        display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 2rem;
+        column-gap: 2rem;
         & .item {
             height: 40vw;
         }
